--- a/Demo1.html
+++ b/Demo1.html
@@ -2,7 +2,7 @@
 <head>
   <title>Example2</title>
 </head>
-<body>
+<body bgcolor="yellow">
 <h1> Examples </h1>
 <table border="2" align="center" width="60%">
   <tr>
