--- a/Demo.5.html
+++ b/Demo.5.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <h1>PRODUCT IN filpkart</h1>
+        <h1>PRODUCT IN AMAZON</h1>
         <table border="9" align="center" width="60%">
             <tr>
                 <th>product Image</th>
